Flatten array fix, minor UX and UI fixes
.flat() does not work in EDGE and IE.

so it's changed with: .concat.apply([],[...]) and it now works in both IE and EDGE.

Fixed the bug not showing the player winning.

Minor fixes to UX.

--- a/src/App.css
+++ b/src/App.css
@@ -69,6 +69,7 @@ button {
   margin: 2px;
   margin-top: 50px;
   font-weight: 700;
+  cursor: pointer;
 }
 .reset {
   margin-top: 30px !important;
